--- a/articles/application-gateway/index.yml
+++ b/articles/application-gateway/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: vhorne
   ms.author: victorh
   ms.date: 03/24/2020
-  ms.openlocfilehash: aaa1774b7680f87e9c3dab13dbe53a627f3890bf
-  ms.sourcegitcommit: 940e16ff194d5163f277f98d038833b1055a1a3e
+  ms.openlocfilehash: 63000da3b1d3e69c2a0c0a1d10267e18da199ffa
+  ms.sourcegitcommit: 3543d3b4f6c6f496d22ea5f97d8cd2700ac9a481
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "80245737"
+  ms.lasthandoff: 07/20/2020
+  ms.locfileid: "86524762"
 landingContent:
 - title: Application Gateway について
   linkLists:
@@ -71,6 +71,18 @@ landingContent:
     links:
     - text: AKS のイングレス コントローラーを作成する
       url: ingress-controller-install-new.md
+- title: Application Gateway を使用して HTTP ヘッダーと URL を書き換える
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: Application Gateway を使用して HTTP ヘッダーと URL を書き換える
+      url: rewrite-http-headers-url.md
+  - linkListType: how-to-guide
+    links:
+    - text: Azure portal を使用して HTTP ヘッダーを書き換える
+      url: rewrite-http-headers-portal.md
+    - text: Azure portal を使用して URL とクエリ文字列を書き換える
+      url: rewrite-url-portal.md
 - title: Application Gateway のトラブルシューティング
   linkLists:
   - linkListType: overview
