--- a/articles/container-instances/TOC.yml
+++ b/articles/container-instances/TOC.yml
@@ -16,6 +16,8 @@
     - name: コンテナー インスタンスのデプロイ - Resource Manager テンプレート
       displayName: Resource Manager
       href: container-instances-quickstart-template.md
+    - name: コンテナー インスタンスのデプロイ - Docker CLI
+      href: container-instances-quickstart-docker-cli.md
 - name: チュートリアル
   items:
     - name: コンテナー イメージの作成とデプロイ
@@ -94,8 +96,10 @@
           href: container-instances-gpu.md
         - name: サイドカーでの SSL エンドポイントの有効化
           href: container-instances-container-group-ssl.md
-        - name: 静的 IP アドレスの公開
+        - name: App Gateway を使用して静的 IP を公開する
           href: container-instances-application-gateway.md
+        - name: イングレスとエグレスに Azure Firewall を使用する
+          href: container-instances-egress-ip-address.md
     - name: データ ボリュームのマウント
       items:
         - name: Azure ファイル共有
