--- a/articles/cognitive-services/personalizer/toc.yml
+++ b/articles/cognitive-services/personalizer/toc.yml
@@ -17,6 +17,8 @@
   items:
     - name: Web アプリの使用
       href: tutorial-use-personalizer-web-app.md
+    - name: チャット ボットの使用
+      href: tutorial-use-personalizer-chat-bot.md
     - name: Azure Notebook の使用
       href: tutorial-use-azure-notebook-generate-loop-data.md
       displayName: 'jupyter, notebook, python, cell, graph, chart, aggregate, model update frequency'
