--- a/articles/governance/resource-graph/index.yml
+++ b/articles/governance/resource-graph/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: DCtheGeek
   ms.author: dacoulte
   ms.date: 06/29/2020
-  ms.openlocfilehash: b5b3caea00fc4d0f172da1f1ec843ddbdd6470e2
-  ms.sourcegitcommit: 73ac360f37053a3321e8be23236b32d4f8fb30cf
+  ms.openlocfilehash: 56944141b70243cda870b5d198be567cfc4ae40c
+  ms.sourcegitcommit: 3543d3b4f6c6f496d22ea5f97d8cd2700ac9a481
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 06/30/2020
-  ms.locfileid: "85565649"
+  ms.lasthandoff: 07/20/2020
+  ms.locfileid: "86536784"
 landingContent:
 - title: Azure Resource Graph について
   linkLists:
@@ -41,12 +41,18 @@ landingContent:
       url: ./first-query-azurecli.md
     - text: 初めてのクエリ (Azure PowerShell)
       url: ./first-query-powershell.md
+    - text: 初めてのクエリ (.NET)
+      url: ./first-query-dotnet.md
     - text: 初めてのクエリ (Go)
       url: ./first-query-go.md
     - text: 初めてのクエリ (JavaScript)
       url: ./first-query-javascript.md
     - text: 初めてのクエリ (Python)
       url: ./first-query-python.md
+    - text: 初めてのクエリ (Ruby)
+      url: ./first-query-ruby.md
+    - text: 初めてのクエリ (REST)
+      url: ./first-query-rest-api.md
     - text: クエリの共有 (ポータル)
       url: ./tutorials/create-share-query.md
   - linkListType: concept
