--- a/articles/governance/resource-graph/toc.yml
+++ b/articles/governance/resource-graph/toc.yml
@@ -29,6 +29,9 @@
     - name: 最初のクエリを実行する - Python
       displayName: 'library, azure-mgmt, cli'
       href: ./first-query-python.md
+    - name: 最初のクエリを実行する - Ruby
+      displayName: 'gem, azure-mgmt'
+      href: ./first-query-ruby.md
     - name: 最初のクエリを実行する - REST
       displayName: 'armclient, postman'
       href: ./first-query-rest-api.md
