--- a/articles/marketplace/TOC.yml
+++ b/articles/marketplace/TOC.yml
@@ -135,10 +135,14 @@
               href: ./partner-center-portal/create-consulting-service-offer.md
         - name: Dynamics 365 のオファー
           items:
-            - name: Dynamics 365 for Customer Engagement & PowerApps オファーの作成
+            - name: Dynamics 365 for Customer Engagement & Power Apps オファーの作成
               href: ./partner-center-portal/create-new-customer-engagement-offer.md
             - name: Dynamics 365 for Operations オファーの作成
-              href: ./partner-center-portal/create-new-operations-offer.md
+              items:
+                - name: Dynamics 365 for Operations オファーの作成
+                  href: ./partner-center-portal/create-new-operations-offer.md
+                - name: 機能検証
+                  href: ./dynamics-365-finance-operations-functional-validation.md
             - name: Dynamics 365 Business Central オファーの作成
               href: ./partner-center-portal/create-new-business-central-offer.md
         - name: IoT Edge モジュール オファー
