--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -114,7 +114,7 @@
               href: concepts-data-encryption-postgresql.md
             - name: インフラストラクチャの二重暗号化
               href: concepts-infrastructure-double-encryption.md
-            - name: セキュリティ ベースライン
+            - name: Azure セキュリティ ベンチマーク用のセキュリティ ベースライン
               href: security-baseline.md
         - name: ビジネス継続性
           items:
@@ -183,6 +183,8 @@
               href: concepts-hyperscale-firewall-rules.md
             - name: SSL の構成
               href: concepts-hyperscale-ssl-connection-security.md
+            - name: Azure セキュリティ ベンチマーク用のセキュリティ ベースライン
+              href: postgresql-hyperscale-security-baseline.md
         - name: ビジネス継続性
           items:
             - name: バックアップと復元
