--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -143,6 +143,8 @@
           href: cluster-security-certificates.md
         - name: Service Fabric での証明書管理
           href: cluster-security-certificate-management.md
+        - name: Azure セキュリティ ベンチマーク用のセキュリティ ベースライン
+          href: security-baseline.md
     - name: 用語
       href: service-fabric-technical-overview.md
     - name: アプリケーションの構築
