--- a/articles/site-recovery/toc.yml
+++ b/articles/site-recovery/toc.yml
@@ -62,6 +62,8 @@
           href: tutorial-dr-drill-azure.md
         - name: Azure にフェールオーバーする
           href: hyper-v-azure-failover-failback-tutorial.md
+        - name: プライベート エンドポイントを使用したオンプレミス レプリケーションを有効にする
+          href: ./hybrid-how-to-enable-replication-private-endpoints.md
     - name: Azure への移行
       items:
         - name: オンプレミスのレプリケーション用に Azure を準備する
@@ -186,6 +188,8 @@
               href: azure-to-azure-how-to-enable-replication-s2d-vms.md
             - name: 追加したディスクのレプリケーションを有効にする
               href: azure-to-azure-enable-replication-added-disk.md
+            - name: プライベート エンドポイントを使用したレプリケーションを有効にする
+              href: ./azure-to-azure-how-to-enable-replication-private-endpoints.md
             - name: ディスクを除外する
               href: azure-to-azure-exclude-disks.md
             - name: フェールオーバー後に Azure VM を再保護する
@@ -242,6 +246,8 @@
               href: vmware-azure-set-up-target.md
             - name: レプリケーションの設定を構成する
               href: vmware-azure-set-up-replication.md
+            - name: プライベート エンドポイントを使用したオンプレミス レプリケーションを有効にする
+              href: ./hybrid-how-to-enable-replication-private-endpoints.md
             - name: モビリティ サービスをデプロイする
               items:
                 - name: モビリティ サービスの概要とインストール
@@ -308,6 +314,8 @@
               href: physical-azure-set-up-source.md
             - name: ターゲット環境をセットアップする
               href: vmware-azure-set-up-target.md
+            - name: プライベート エンドポイントを使用したオンプレミス レプリケーションを有効にする
+              href: ./hybrid-how-to-enable-replication-private-endpoints.md
             - name: モビリティ サービスをデプロイする
               items:
                 - name: モビリティ サービスのインストールについて
