--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -385,6 +385,8 @@
                           href: ../common/storage-encryption-keys-cli.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: 要求での暗号化キーの指定
                   href: storage-blob-customer-provided-key.md
+                - name: 暗号化範囲の管理
+                  href: encryption-scope-manage.md
                 - name: ストレージ アカウントのインフラストラクチャの暗号化を有効にする
                   href: ../common/infrastructure-encryption-enable.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: クライアント側の暗号化の構成
@@ -489,8 +491,6 @@
           items:
             - name: Azure portal での監視 (クラシック)
               href: ../common/storage-monitor-storage-account.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: トラブルシューティングのチュートリアル (クラシック)
-              href: ../common/storage-e2e-troubleshooting.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: トラブルシューティング
           items:
             - name: 待機時間に関する問題
@@ -554,6 +554,8 @@
               href: 'https://github.com/microsoft/AzureStorageExplorer/releases'
             - name: ストレージ エクスプローラーのトラブルシューティング
               href: ../common/storage-explorer-troubleshooting.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: Storage Explorer のサポート ポリシーとライフサイクル
+              href: ../common/storage-explorer-support-policy-lifecycle.md
             - name: ストレージ エクスプローラーのアクセシビリティ
               href: ../../vs-azure-tools-storage-explorer-accessibility.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Azure Storage フォーラム
