--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -611,6 +611,8 @@
               href: create-cassandra-nodejs.md
             - name: Python
               href: create-cassandra-python.md
+            - name: Golang
+              href: create-cassandra-go.md
         - name: チュートリアル
           items:
             - name: 1 - データの作成と管理
