--- a/articles/cost-management-billing/index.yml
+++ b/articles/cost-management-billing/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: bandersmsft
   ms.author: banders
   ms.date: 06/01/2020
-  ms.openlocfilehash: 04b52a6aff1a8a24f2aa9988afec60c69c88c138
-  ms.sourcegitcommit: d7008edadc9993df960817ad4c5521efa69ffa9f
+  ms.openlocfilehash: c119a7da6da42266c2cfb615a8aad887ac846579
+  ms.sourcegitcommit: 3d79f737ff34708b48dd2ae45100e2516af9ed78
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 07/08/2020
-  ms.locfileid: "86113396"
+  ms.lasthandoff: 07/23/2020
+  ms.locfileid: "87039771"
 landingContent:
 - title: コストの分析
   linkLists:
@@ -36,7 +36,7 @@ landingContent:
     - text: 一般的なタスクにコスト分析を使用する
       url: costs/cost-analysis-common-uses.md
     - text: Power BI テンプレート アプリを使用してコストを分析する
-      url: https://docs.microsoft/azure/cost-management-billing/costs/analyze-cost-data-azure-cost-management-power-bi-template-app
+      url: https://docs.microsoft.com/azure/cost-management-billing/costs/analyze-cost-data-azure-cost-management-power-bi-template-app
     - text: Power BI Desktop を使用して接続する
       url: /power-bi/desktop-connect-azure-cost-management
   - linkListType: tutorial
@@ -58,7 +58,7 @@ landingContent:
   - linkListType: concept
     links:
     - text: 自動化を使用したコストの管理
-      url: https://docs.microsoft/azure/cost-management-billing/costs/manage-automation
+      url: https://docs.microsoft.com/azure/cost-management-billing/costs/manage-automation
     - text: 使用条件の説明
       url: understand/understand-usage.md
     - text: 請求条件の説明
@@ -96,11 +96,11 @@ landingContent:
   - linkListType: learn
     links:
     - text: 今すぐコストの最適化を始める
-      url: https://azure.microsoft/overview/cost-optimization/
+      url: https://azure.microsoft.com/overview/cost-optimization/
     - text: コストを予測し、Azure の支出を最適化する
-      url: https://docs.microsoft/learn/modules/predict-costs-and-optimize-spending/
+      url: https://docs.microsoft.com/learn/modules/predict-costs-and-optimize-spending/
     - text: Microsoft Azure Well-Architected Framework - コストの最適化
-      url: https://docs.microsoft/learn/modules/azure-well-architected-cost-optimization/
+      url: https://docs.microsoft.com/learn/modules/azure-well-architected-cost-optimization/
 - title: Cost Management と Billing を構成する
   linkLists:
   - linkListType: concept
