--- a/articles/governance/policy/breadcrumb/toc.yml
+++ b/articles/governance/policy/breadcrumb/toc.yml
@@ -15,3 +15,6 @@
         - name: ポリシー
           tocHref: /azure/key-vault
           topicHref: /azure/governance/policy
+        - name: ポリシー
+          tocHref: /azure/aks
+          topicHref: /azure/governance/policy
