--- a/articles/media-services/index.yml
+++ b/articles/media-services/index.yml
@@ -13,12 +13,12 @@ metadata:
   author: Juliako
   ms.author: juliako
   ms.date: 07//2020
-  ms.openlocfilehash: 5d49173a9c06e35c5af3831e504fc6f55a8dfc50
-  ms.sourcegitcommit: 223cea58a527270fe60f5e2235f4146aea27af32
+  ms.openlocfilehash: da549a54773365d39e3a19179acd6495a6ac1ce5
+  ms.sourcegitcommit: 3d79f737ff34708b48dd2ae45100e2516af9ed78
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 06/01/2020
-  ms.locfileid: "84259543"
+  ms.lasthandoff: 07/23/2020
+  ms.locfileid: "87023366"
 highlightedContent:
   items:
   - title: Azure Media Services v3 について
@@ -52,7 +52,7 @@ conceptualContent:
     - url: ./latest/media-services-apis-overview.md
       itemType: concept
       text: Media Services v3 を使用した開発
-    - url: https://docs.microsoft.com/samples/browse/?products=azure-media-services
+    - url: /samples/browse/?products=azure-media-services
       itemType: sample
       text: コード サンプル
     - url: ./latest/release-notes.md
@@ -132,4 +132,4 @@ additionalContent:
       url: https://docs.microsoft.com/azure/cdn
     - title: Event Grid
       summary: Azure Event Grid を使用して関連するイベントに対応する方法について説明します
-      url: https://docs.microsoft.com/azure/event-grid/
+      url: ../event-grid/index.yml
