--- a/articles/aks/index.yml
+++ b/articles/aks/index.yml
@@ -8,13 +8,13 @@ metadata:
   ms.topic: landing-page
   author: laurenhughes
   ms.author: lahugh
-  ms.date: 03/25/2020
-  ms.openlocfilehash: c3a5651df8ad1f07f3b9800abfe4b48e829ff27b
-  ms.sourcegitcommit: dabd9eb9925308d3c2404c3957e5c921408089da
+  ms.date: 07/21/2020
+  ms.openlocfilehash: 0a1efee059f0606248c5514dd37d1568e73897f6
+  ms.sourcegitcommit: 3d79f737ff34708b48dd2ae45100e2516af9ed78
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 07/11/2020
-  ms.locfileid: "86251656"
+  ms.lasthandoff: 07/23/2020
+  ms.locfileid: "87025202"
 landingContent:
 - title: Azure Kubernetes Service (AKS) について
   linkLists:
@@ -26,6 +26,8 @@ landingContent:
     links:
     - text: AKS に対する Kubernetes の中心概念
       url: concepts-clusters-workloads.md
+    - text: AKS クラスターのベースライン アーキテクチャ
+      url: /azure/architecture/reference-architectures/containers/aks/secure-baseline-aks/
     - text: クラスターとワークロード
       url: concepts-clusters-workloads.md
     - text: アクセスと ID
@@ -55,7 +57,7 @@ landingContent:
     - text: Visual Studio Code を使用して Local Process with Kubernetes を利用する (プレビュー)
       url: ../dev-spaces/how-to/local-process-kubernetes-vs-code.md
     - text: Visual Studio で Local Process with Kubernetes を使用する (プレビュー)
-      url: ../dev-spaces/how-to/local-process-kubernetes-visual-studio.md
+      url: /visualstudio/containers/local-process-kubernetes
 - title: アプリケーションのデプロイ、管理、更新
   linkLists:
   - linkListType: tutorial
