--- a/articles/cost-management-billing/toc.yml
+++ b/articles/cost-management-billing/toc.yml
@@ -271,7 +271,7 @@
                 - name: App Service
                   href: reservations/prepay-app-service-isolated-stamp.md
                 - name: Azure Cache for Redis の予約
-                  href: ../azure-cache-for-redis/cache-reserved-pricing.md?toc=/azure/cost-management-billing/toc.json
+                  href: /azure/data-explorer/pricing-reserved-capacity
                 - name: Cosmos DB
                   href: ../cosmos-db/cosmos-db-reserved-capacity.md?toc=/azure/cost-management-billing/toc.json
                 - name: Databricks
@@ -465,4 +465,4 @@
             - name: Cloudyn に関する FAQ
               href: cloudyn/cost-mgt-faq.md
             - name: Cloudyn のサポートに問い合わせる
-              href: /cloudyn/open-support-request.md
+              href: 'https://docs.microsoft.com/azure/cost-management-billing/costs/open-support-request'
