--- a/articles/virtual-machines/TOC.yml
+++ b/articles/virtual-machines/TOC.yml
@@ -1,29 +1,29 @@
 - name: Virtual Machines のドキュメント
   href: index.yml
 - name: Azure の Linux Virtual Machines
-  href: 'https://docs.microsoft.com/azure/virtual-machines/linux/'
+  href: ./linux/index.yml
 - name: Azure の Windows Virtual Machines
-  href: 'https://docs.microsoft.com/azure/virtual-machines/windows/'
+  href: ./windows/index.yml
 - name: VM 拡張機能のドキュメント
   href: ./extensions/overview.md
 - name: ワークロード
   items:
     - name: Red Hat
-      href: ./workloads/redhat/redhat-overview.md
+      href: ./workloads/redhat/overview.md
     - name: ハイ パフォーマンス コンピューティング
       href: ./workloads/hpc/overview.md
     - name: SAP
       href: ./workloads/sap/get-started.md
     - name: Oracle
-      href: ./workloads/oracle/oracle-considerations.md
+      href: ./workloads/oracle/oracle-overview.md
     - name: メインフレームのホスト変更
       href: ./workloads/mainframe-rehosting/overview.md
 - name: クラシック デプロイ
   items:
     - name: クラシック デプロイメントを使用した Linux VM
-      href: 'https://docs.microsoft.com/previous-versions/azure/virtual-machines/linux/classic/'
+      href: /previous-versions/azure/virtual-machines/linux/classic/
     - name: クラシック デプロイメントを使用した Windows VM
-      href: 'https://docs.microsoft.com/previous-versions/azure/virtual-machines/windows/classic/'
+      href: /previous-versions/azure/virtual-machines/windows/classic/
 - name: リソース
   items:
     - name: Microsoft Learn でスキルを身に付ける
