--- a/articles/hpc-cache/index.yml
+++ b/articles/hpc-cache/index.yml
@@ -8,14 +8,14 @@ metadata:
   ms.topic: landing-page
   ms.collection: collection
   author: ekpgh
-  ms.author: rohogue
+  ms.author: v-erkel
   ms.date: 11/07/2019
-  ms.openlocfilehash: 3cee41dd9cb4852eab884345404ba89eff8d9d91
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.openlocfilehash: a31fb7a2878766e960e602e5167df4f92a978f25
+  ms.sourcegitcommit: 3d79f737ff34708b48dd2ae45100e2516af9ed78
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "77651034"
+  ms.lasthandoff: 07/23/2020
+  ms.locfileid: "87061300"
 landingContent:
 - title: Azure HPC Cache について
   linkLists:
@@ -28,7 +28,7 @@ landingContent:
   - linkListType: how-to-guide
     links:
     - text: Azure HPC Cache の前提条件を構成する
-      url: hpc-cache-prereqs.md
+      url: hpc-cache-prerequisites.md
     - text: キャッシュを作成する
       url: hpc-cache-create.md
     - text: ストレージを追加する
@@ -43,7 +43,7 @@ landingContent:
       url: hpc-cache-namespace.md
     - text: データをストレージ ターゲットに移動する (必要な場合)
       url: hpc-cache-ingest.md
-- title: '[トラブルシューティング]'
+- title: トラブルシューティング
   linkLists:
   - linkListType: how-to-guide
     links:
