--- a/articles/dev-spaces/index.yml
+++ b/articles/dev-spaces/index.yml
@@ -11,12 +11,12 @@ metadata:
   ms.author: zarhoads
   manager: gwallace
   ms.date: 09/30/2019
-  ms.openlocfilehash: ea9865d35b25b5691f702b91c6255f0f703c3e90
-  ms.sourcegitcommit: 69156ae3c1e22cc570dda7f7234145c8226cc162
+  ms.openlocfilehash: 778d697f5c84f99da6974b9d689ddfe35930cd33
+  ms.sourcegitcommit: 3d79f737ff34708b48dd2ae45100e2516af9ed78
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 06/03/2020
-  ms.locfileid: "84310038"
+  ms.lasthandoff: 07/23/2020
+  ms.locfileid: "87072901"
 landingContent:
 - title: Azure Dev Spaces について
   linkLists:
@@ -65,6 +65,6 @@ landingContent:
     - text: Azure Dev Spaces で GitHub アクションを使用する
       url: how-to/github-actions.md
     - text: Visual Studio Code を使用して Local Process with Kubernetes を利用する
-      url: how-to/local-process-kubernetes-vs-code.md
+      url: https://code.visualstudio.com/docs/containers/local-process-kubernetes
     - text: Visual Studio を使用して Local Process with Kubernetes を利用する
-      url: how-to/local-process-kubernetes-visual-studio.md
+      url: /visualstudio/containers/local-process-kubernetes
