--- a/articles/notification-hubs/TOC.yml
+++ b/articles/notification-hubs/TOC.yml
@@ -54,8 +54,6 @@
               href: ios-sdk-300.md
             - name: Objective-C (バージョン 2.0.4)
               href: ios-sdk-204.md
-            - name: Swift
-              href: ios-sdk-swift-rest.md
         - name: 特定のデバイスにプッシュ通知を送信する
           href: notification-hubs-ios-xplat-segmented-apns-push-notification.md
         - name: 特定のユーザーにプッシュ通知を送信する
@@ -64,16 +62,6 @@
           href: xamarin-notification-hubs-ios-push-notification-apns-get-started.md
         - name: iOS デバイスにローカライズしたプッシュ通知を送信する
           href: notification-hubs-ios-xplat-localized-apns-push-notification.md
-    - name: クロスプラットフォーム
-      items:
-        - name: バックエンド サービスを介してプッシュ通知を送信する
-          items:
-            - name: Xamarin.Forms
-              href: notification-hubs-backend-service-xamarin-forms.md
-            - name: Flutter
-              href: notification-hubs-backend-service-flutter.md
-            - name: React Native
-              href: notification-hubs-backend-service-react-native.md
     - name: Windows Phone
       items:
         - name: アプリにプッシュ通知を送信する
@@ -188,7 +176,7 @@
     - name: 価格
       href: 'https://azure.microsoft.com/pricing/details/notification-hubs/'
     - name: Microsoft Q&A 質問ページ
-      href: 'https://docs.microsoft.com/answers/topics/azure-notification-hubs.html'
+      href: /answers/topics/azure-notification-hubs.html
     - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-notificationhub'
     - name: 機能をリクエストする
