commit translated contents

--- a/articles/iot-dps/toc.yml
+++ b/articles/iot-dps/toc.yml
@@ -99,6 +99,8 @@
       href: concepts-security.md
     - name: TLS サポート
       href: tls-support.md
+    - name: 仮想ネットワークのサポート
+      href: virtual-network-support.md
     - name: サービス
       href: concepts-service.md
     - name: DPS IP アドレスについて
