--- a/articles/remote-rendering/concepts/toc.yml
+++ b/articles/remote-rendering/concepts/toc.yml
@@ -2,7 +2,7 @@
   href: sessions.md
 - name: エンティティ
   href: entities.md
-- name: Components
+- name: コンポーネント
   href: components.md
 - name: モデル
   href: models.md
