commit translated contents

--- a/articles/blockchain/workbench/TOC.yml
+++ b/articles/blockchain/workbench/TOC.yml
@@ -52,7 +52,7 @@
     - name: メッセージング API
       href: messages-overview.md
     - name: REST API
-      href: 'https://docs.microsoft.com/rest/api/azure-blockchain-workbench'
+      href: /rest/api/azure-blockchain-workbench
 - name: リソース
   items:
     - name: コード サンプル
@@ -60,7 +60,7 @@
     - name: ブログ
       href: 'https://azure.microsoft.com/blog/topics/blockchain/'
     - name: Microsoft Q&A 質問ページ
-      href: 'https://docs.microsoft.com/answers/topics/azure-blockchain-workbench.html'
+      href: /answers/topics/azure-blockchain-workbench.html
     - name: コミュニティ サポート
       href: 'https://techcommunity.microsoft.com/t5/Blockchain/bd-p/AzureBlockchain'
     - name: Stack Overflow サポート
