--- a/articles/index.yml
+++ b/articles/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.date: 02/27/2020
   featureFlags:
   - clicktale
-  ms.openlocfilehash: 451bbf8f82623fdc20be21b4ffa1699f6c5722cf
-  ms.sourcegitcommit: 3543d3b4f6c6f496d22ea5f97d8cd2700ac9a481
+  ms.openlocfilehash: cddf39ee7b13b8af887ccb424d540cbf482040e9
+  ms.sourcegitcommit: 3d79f737ff34708b48dd2ae45100e2516af9ed78
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 07/20/2020
-  ms.locfileid: "86536878"
+  ms.lasthandoff: 07/23/2020
+  ms.locfileid: "87079078"
 highlightedContent:
   items:
   - title: Azure 開発者向けファースト ステップ ガイド
@@ -951,7 +951,7 @@ productDirectory:
     azureCategories:
     - management-and-governance
     url: azure-resource-manager/index.yml
-  - title: Azure Resource Manager のテンプレート
+  - title: ARM テンプレート
     summary: Resource Manager を使用して、あらゆる Azure リソース向けにコードとしてのインフラストラクチャを提供
     imageSrc: https://static.docs.com/ui/media/product/azure/resource-groups.svg
     azureCategories:
