commit translated contents

--- a/articles/logic-apps/index.yml
+++ b/articles/logic-apps/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: ecfan
   ms.author: estfan; logicappspm
   ms.date: 09/18/2019
-  ms.openlocfilehash: 8c4f701c398e27114844b5a2b95c894044c3a8b2
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.openlocfilehash: 1b3d77631e547038c3efc4589727c0ba2d7a7006
+  ms.sourcegitcommit: 3d79f737ff34708b48dd2ae45100e2516af9ed78
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "71268868"
+  ms.lasthandoff: 07/23/2020
+  ms.locfileid: "87086423"
 landingContent:
 - title: Azure Logic Apps について
   linkLists:
@@ -26,7 +26,7 @@ landingContent:
   - linkListType: concept
     links:
     - text: Azure Logic Apps のコネクタ
-      url: /azure/connectors/apis-list
+      url: ../connectors/apis-list.md
     - text: 定期的なワークフローをスケジュール設定する
       url: concepts-schedule-automated-recurring-tasks-workflows.md
     - text: B2B エンタープライズ統合
@@ -34,7 +34,7 @@ landingContent:
   - linkListType: learn
     links:
     - text: Azure Logic Apps の概要
-      url: https://docs.microsoft.com/learn/modules/intro-to-logic-apps/
+      url: /learn/modules/intro-to-logic-apps/
   - linkListType: video
     links:
     - text: Azure Logic Apps の概要
@@ -56,7 +56,7 @@ landingContent:
   - linkListType: learn
     links:
     - text: データを自動的にルーティングして処理する
-      url: https://docs.microsoft.com/learn/modules/route-and-process-data-logic-apps
+      url: /learn/modules/route-and-process-data-logic-apps
   - linkListType: tutorial
     links:
     - text: スケジュールベースのワークフローを作成する
@@ -74,7 +74,7 @@ landingContent:
   - linkListType: concept
     links:
     - text: オンプレミス データ ゲートウェイとは
-      url: https://docs.microsoft.com/data-integration/gateway/service-gateway-onprem
+      url: /data-integration/gateway/service-gateway-onprem
     - text: 統合サービス環境とは
       url: connect-virtual-network-vnet-isolated-environment-overview.md
   - linkListType: how-to-guide
@@ -102,11 +102,11 @@ landingContent:
   - linkListType: learn
     links:
     - text: サンプル:統合アカウントに接続し、Azure DevOps を使用してデプロイする
-      url: https://docs.microsoft.com/samples/azure-samples/azure-logic-apps-deployment-samples/connect-to-an-integration-account-from-azure-logic-apps-and-deploy-by-using-azure-devops-pipelines/
+      url: /samples/azure-samples/azure-logic-apps-deployment-samples/connect-to-an-integration-account-from-azure-logic-apps-and-deploy-by-using-azure-devops-pipelines/
   - linkListType: architecture
     links:
     - text: 基本的なエンタープライズ統合
-      url: https://docs.microsoft.com/azure/architecture/reference-architectures/enterprise-integration/basic-enterprise-integration
+      url: /azure/architecture/reference-architectures/enterprise-integration/basic-enterprise-integration
 - title: Logic Apps を管理して保護する
   linkLists:
   - linkListType: how-to-guide
@@ -134,11 +134,11 @@ landingContent:
   - linkListType: learn
     links:
     - text: Resource Manager テンプレートを使って作成およびデプロイする
-      url: https://docs.microsoft.com/learn/modules/create-deploy-logic-apps-using-arm-templates/
+      url: /learn/modules/create-deploy-logic-apps-using-arm-templates/
     - text: サンプル:Azure Storage に接続して Azure DevOps でデプロイする
-      url: https://docs.microsoft.com/samples/azure-samples/azure-logic-apps-deployment-samples/connect-to-azure-storage-accounts-from-azure-logic-apps-and-deploy-with-azure-devops-pipelines/
+      url: /samples/azure-samples/azure-logic-apps-deployment-samples/connect-to-azure-storage-accounts-from-azure-logic-apps-and-deploy-with-azure-devops-pipelines/
     - text: サンプル:Azure Service Bus に接続して Azure DevOps でデプロイする
-      url: https://docs.microsoft.com/samples/azure-samples/azure-logic-apps-deployment-samples/connect-to-azure-service-bus-queues-from-azure-logic-apps-and-deploy-with-azure-devops-pipelines/
+      url: /samples/azure-samples/azure-logic-apps-deployment-samples/connect-to-azure-service-bus-queues-from-azure-logic-apps-and-deploy-with-azure-devops-pipelines/
 - title: 詳細情報
   linkLists:
   - linkListType: reference
@@ -150,6 +150,6 @@ landingContent:
     - text: ワークフロー定義言語スキーマ
       url: logic-apps-workflow-definition-language.md
     - text: Azure PowerShell
-      url: https://docs.microsoft.com/powershell/module/az.logicapp/
+      url: /powershell/module/az.logicapp/
     - text: REST API
-      url: https://docs.microsoft.com/rest/api/logic/
+      url: /rest/api/logic/
