commit translated contents

--- a/articles/virtual-desktop/virtual-desktop-fall-2019/TOC.yml
+++ b/articles/virtual-desktop/virtual-desktop-fall-2019/TOC.yml
@@ -70,6 +70,8 @@
           href: diagnostics-log-analytics-2019.md
     - name: 組み込みアプリの公開
       href: publish-apps-2019.md
+    - name: Azure Multi-Factor Authentication を設定する
+      href: ../set-up-mfa.md
 - name: 概念
   items:
     - name: Windows Virtual Desktop の環境
